# jupyterlab-env

./: .gitignore  README.md  jupyter_lab_config.json  jupyter_lab_config.py  package.json  pyproject.toml
lab/user-settings/@jupyterlab/apputils-extension/: themes.jupyterlab-settings
lab/user-settings/@jupyterlab/console-extension/: tracker.jupyterlab-settings
lab/user-settings/@jupyterlab/fileeditor-extension/: plugin.jupyterlab-settings
lab/user-settings/@jupyterlab/markdownviewer-extension/: plugin.jupyterlab-settings
lab/user-settings/@jupyterlab/notebook-extension/: tracker.jupyterlab-settings
lab/user-settings/@jupyterlab/shortcuts-extension/: shortcuts.jupyterlab-settings
lab/user-settings/@krassowski/jupyterlab-lsp/: completion.jupyterlab-settings  hover.jupyterlab-settings  jump_to.jupyterlab-settings  plugin.jupyterlab-settings
lab/user-settings/jupyterlab-code-snippets/: snippets.jupyterlab-settings
templates/general/: basic.ipynb
