[tool.poetry]
name = "jupyter-general-server"
version = "0.1.0"
description = ""
authors = ["Adam Huganir <adam@huganir.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipykernel = "^6.6.0"
jupyterlab = "^3.2.4"
jupytext = "^1.13.2"
ipywidgets = "^7.6.5"
retrolab = "^0.3.13"
tqdm = "^4.62.3"
jupyterlab-lsp = "^3.9.1"
jut = "^0.0.24"
jupyterlab-templates = "^0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
