[tool.poetry]
name = "jupyter-general-server"
version = "0.1.0"
description = ""
authors = ["Adam Huganir <adam@huganir.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipykernel = "^6.6.0"
jupyterlab = "^3.2.4"
jupytext = "^1.13.2"
ipywidgets = "^7.6.5"
retrolab = "^0.3.13"
tqdm = "^4.62.3"
jupyterlab-lsp = "^3.9.1"
jut = "^0.0.24"
jupyterlab-templates = "^0.3.1"
jupyterlab-system-monitor = "^0.8.0"
jupyternotify = "^0.1.15"
python-lsp-server = {extras = ["all"], version = "^1.3.2"}
pyls-flake8 = "^0.4.0"
mypy = "^0.910"
mypy-ls = "^0.5.1"
pyls-isort = "^0.2.2"
python-lsp-black = "^1.0.1"
black = "^21.11b1"
isort = "^5.10.1"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
